--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-node_modules
+node_modules/
+# Ignore node_modules folder (for Node.js projects)
+node_modules/
+
+# Ignore macOS specific files
+.DS_Store
+
+# Ignore environment files
+.env
+
