--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "A simple quiz game",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=14"
   }
 }
